--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@vercel/postgres": "^0.5.1",
         "axios": "^1.6.5",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.2",
