--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "express": "^4.18.2",
         "express-async-errors": "^3.1.1",
         "jsonwebtoken": "^9.0.2",
+        "latest": "^0.2.0",
         "pg": "^8.11.3",
         "pg-format": "^1.0.4",
         "zod": "^3.22.4"
